<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/outline_list_24"
            android:title="@string/home_screen_title"/>
        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history"/>
        <item
            android:id="@+id/menu_statistics"
            android:icon="@drawable/ic_stats_black_24dp"
            android:title="@string/statistics"/>
        <item
            android:id="@+id/menu_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications"/>
    </group>
</menu>